Update Worked BtnBody

--- a/AR-Examples-master/index.html
+++ b/AR-Examples-master/index.html
@@ -14,7 +14,7 @@
     <script src="threex/threex-armarkercontrols.js"></script>
 </head>
 
-<body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
+<body onclick="createCube()" style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
     <!--
       Example created by Lee Stemkoski: https://github.com/stemkoski
@@ -22,7 +22,6 @@
     -->
 
 
-    <center><img src="C:\Users\art12\Desktop\Necessary\My Progects\WebXR\AR-Examples-master\1.jpg" onclick="createCube();" alt="700"></center>
     <script>
 
         var scene, camera, renderer, clock, deltaTime, totalTime;
