--- a/AR-Examples-master/index.html
+++ b/AR-Examples-master/index.html
@@ -151,13 +151,9 @@
         // Новые функции
 
         function createCube() {
-            alert("Начал");
 
             markerRoot1 = new THREE.Group();
             scene.add(markerRoot1);
-            let markerControls1 = new THREEx.ArMarkerControls(arToolkitContext, markerRoot1, {
-                type: 'pattern', patternUrl: "data/hiro.patt",
-            })
 
             let geometry1 = new THREE.CubeGeometry(1, 1, 1);
             let material1 = new THREE.MeshNormalMaterial({
@@ -167,10 +163,12 @@
             });
 
             mesh1 = new THREE.Mesh(geometry1, material1);
-            mesh1.position.y = 0.5;
+            mesh1.position.x = 2;
+            mesh1.position.y = 2;
+            mesh1.position.z = 0;
 
             markerRoot1.add(mesh1);
-            alert("Закончил!");
+            alert("END");
         }
     </script>
 
